--- a/LungTrackerWeb/package.json
+++ b/LungTrackerWeb/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "~13.3.1",
     "@angular/platform-browser-dynamic": "~13.3.1",
     "@angular/router": "~13.3.1",
+    "country-state-city": "^3.0.1",
+    "geonames.js": "^3.0.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
