--- a/LungTrackerWeb/package.json
+++ b/LungTrackerWeb/package.json
@@ -11,33 +11,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.3.1",
+    "@angular/animations": "^13.3.5",
     "@angular/cdk": "^11.2.13",
-    "@angular/common": "~13.3.1",
-    "@angular/compiler": "~13.3.1",
-    "@angular/core": "~13.3.1",
+    "@angular/common": "^13.3.5",
+    "@angular/compiler": "^13.3.5",
+    "@angular/core": "^13.3.5",
     "@angular/flex-layout": "12.0.0-beta.34",
-    "@angular/forms": "~13.3.1",
+    "@angular/forms": "^13.3.5",
     "@angular/material": "^11.2.13",
-    "@angular/platform-browser": "~13.3.1",
-    "@angular/platform-browser-dynamic": "~13.3.1",
-    "@angular/router": "~13.3.1",
+    "@angular/platform-browser": "^13.3.5",
+    "@angular/platform-browser-dynamic": "^13.3.5",
+    "@angular/router": "^13.3.5",
+    "angular": "^1.8.3",
     "country-state-city": "^3.0.1",
     "geonames.js": "^3.0.6",
+    "ngx-cookie-service": "^13.2.0",
     "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.4.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.1",
-    "@angular/cli": "~13.3.1",
-    "@angular/compiler-cli": "~13.3.1",
+    "@angular-devkit/build-angular": "^13.3.4",
+    "@angular/cli": "^13.3.4",
+    "@angular/compiler-cli": "^13.3.5",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.50",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.17",
+    "karma": "^6.3.19",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
@@ -45,6 +47,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.6.3"
+    "typescript": "^4.6.4"
   }
 }
