add route protection

--- a/LungTrackerWeb/package.json
+++ b/LungTrackerWeb/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^13.3.5",
     "@angular/router": "^13.3.5",
     "angular": "^1.8.3",
+    "chart.js": "^3.7.1",
     "country-state-city": "^3.0.1",
     "geonames.js": "^3.0.6",
     "ngx-cookie-service": "^13.2.0",
