--- a/LungTrackerWeb/package.json
+++ b/LungTrackerWeb/package.json
@@ -23,9 +23,11 @@
     "@angular/platform-browser-dynamic": "^13.3.5",
     "@angular/router": "^13.3.5",
     "angular": "^1.8.3",
+    "angular2-chartjs": "^0.5.1",
     "chart.js": "^3.7.1",
     "country-state-city": "^3.0.1",
     "geonames.js": "^3.0.6",
+    "ng2-charts": "^3.0.10",
     "ngx-cookie-service": "^13.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.4.0",
