--- a/LungTrackerWeb/package.json
+++ b/LungTrackerWeb/package.json
@@ -26,6 +26,7 @@
     "angular2-chartjs": "^0.5.1",
     "chart.js": "^3.7.1",
     "country-state-city": "^3.0.1",
+    "file-saver": "^2.0.5",
     "geonames.js": "^3.0.6",
     "ng2-charts": "^3.0.10",
     "ngx-cookie-service": "^13.2.0",
