--- a/LungTrackerWeb/package.json
+++ b/LungTrackerWeb/package.json
@@ -30,6 +30,7 @@
     "geonames.js": "^3.0.6",
     "ng2-charts": "^3.0.10",
     "ngx-cookie-service": "^13.2.0",
+    "ngx-pagination": "^5.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.4"
