--- a/LungTrackerWeb/package.json
+++ b/LungTrackerWeb/package.json
@@ -22,12 +22,14 @@
     "@angular/platform-browser": "^13.3.5",
     "@angular/platform-browser-dynamic": "^13.3.5",
     "@angular/router": "^13.3.5",
+    "@asymmetrik/ngx-leaflet": "^13.0.2",
     "angular": "^1.8.3",
     "angular2-chartjs": "^0.5.1",
     "chart.js": "^3.7.1",
     "country-state-city": "^3.0.1",
     "file-saver": "^2.0.5",
     "geonames.js": "^3.0.6",
+    "leaflet": "^1.8.0",
     "ng2-charts": "^3.0.10",
     "ngx-cookie-service": "^13.2.0",
     "ngx-pagination": "^5.1.1",
@@ -39,7 +41,9 @@
     "@angular-devkit/build-angular": "^13.3.4",
     "@angular/cli": "^13.3.4",
     "@angular/compiler-cli": "^13.3.5",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.6.0",
+    "@types/leaflet": "^1.7.10",
     "@types/node": "^12.20.50",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
