--- a/LungTrackerWeb/package.json
+++ b/LungTrackerWeb/package.json
@@ -30,6 +30,7 @@
     "file-saver": "^2.0.5",
     "geonames.js": "^3.0.6",
     "leaflet": "^1.8.0",
+    "leaflet.heat": "^0.2.0",
     "ng2-charts": "^3.0.10",
     "ngx-cookie-service": "^13.2.0",
     "ngx-pagination": "^5.1.1",
@@ -44,6 +45,7 @@
     "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.6.0",
     "@types/leaflet": "^1.7.10",
+    "@types/leaflet.heat": "^0.2.1",
     "@types/node": "^12.20.50",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
